vlib/v/checker/tests/enum_value_used_before_decl_err.out
vlib/v/checker/tests/enum_value_used_before_decl_err.vv:2:10: error: cannot use `TestEnum.a` as not defined or declared later
    1 | enum TestEnum {
    2 |     chan  = int(TestEnum.a)
      |             ~~~~~~~~~~~~~~~
    3 |     a = 0
    4 |     b = 1
